# BuildSystemForCXX

./: README.md
CLANG++_BUILD_AND_BINARY_FILES/CLANG++_BINARY_FILES/: CLANG_COPIED_SHARED_LIBS.txt  CLANG_LINK_MESSAGES.txt  EXPORT_DELIVERIES.txt
CLANG++_BUILD_AND_BINARY_FILES/CLANG++_BINARY_FILES/CLANG_PROJECT_TO_BE_EXPORTED/: EXPORT_DELIVERIES.txt  MIT_LICENSE.md  libFLAC.so.8  libGL.so.1  libX11.so.6  libXrandr.so.2  libasound.so.2  libbrotlidec.so.1  libbsd.so.0  libdl.so.2  libopenal.so.1  libpcre.so.1  libpthread.so.0  librt.so.1  libsfml-graphics.so.2.5  libsfml-system.so.2.5  libsfml-window.so.2.5  libsndio.so.7.0  libstdc++.so.6  libvorbisenc.so.2  libvorbisfile.so.3  libz.so.1
CLANG++_BUILD_AND_BINARY_FILES/CLANG++_BINARY_FILES/GCC_PROJECT_TO_BE_EXPORTED/: EXPORT_DELIVERIES.txt  libdl.so.2  libgcc_s.so.1  libpthread.so.0
CLANG++_BUILD_AND_BINARY_FILES/CLANG++_BINARY_FILES/SHARED_LIBS/: ld-linux-x86-64.so.2  libFLAC.so.8  libGL.so.1  libGLX.so.0  libGLdispatch.so.0  libX11.so.6  libXau.so.6  libXdmcp.so.6  libXext.so.6  libXrandr.so.2  libXrender.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbsd.so.0  libbz2.so.1  libbz2.so.1.0  libc.so.6  libdl.so.2  libfreetype.so.6  libgcc_s.so.1  libglib-2.0.so.0  libgraphite2.so.3  libharfbuzz.so.0  libm.so.6  libmd.so.0  libogg.so.0  libopenal.so.1  libpcre.so.1  libpng16.so.16  libpthread.so.0  librt.so.1  libsfml-audio.so.2.5  libsfml-graphics.so.2.5  libsfml-system.so.2.5  libsfml-window.so.2.5  libudev.so.1  libvorbis.so.0  libvorbisenc.so.2  libvorbisfile.so.3  libxcb.so.1  (+1 more)
CLANG++_BUILD_AND_BINARY_FILES/CLANG++_BUILD_FILES/: CLANG_BUILD_MESSAGES.txt  MyCXXFile.cxx_BUILD_MESSAGE.txt  MyFile.cpp_BUILD_MESSAGE.txt  MyFourthFile.cpp_BUILD_MESSAGE.txt  MySecondFile.cpp_BUILD_MESSAGE.txt  MyThirdFile.cpp_BUILD_MESSAGE.txt  mainFile.cpp_BUILD_MESSAGE.txt
CMAKE_BUILD_AND_BINARY_FILES/: CMAKE_MESSAGES.txt  CMakeCache.txt  GCC_COPIED_SHARED_LIBS.txt  Makefile  OBJDUMP_INFOS.txt  READELF_INFOS.txt  cmake_install.cmake
CMAKE_BUILD_AND_BINARY_FILES/GCC_PROJECT_TO_BE_EXPORTED/: EXPORT_DELIVERIES.txt  libGLdispatch.so.0  libOpenGL.so.0  libboost_filesystem.so.1.76.0  libboost_system.so.1.76.0  libudev.so.1
CMAKE_BUILD_AND_BINARY_FILES/SHARED_LIBS/: libGLU.so.1  libOpenGL.so.0  libboost_filesystem.so.1.76.0  libboost_system.so.1.76.0  libharfbuzz.so.0  libpng16.so.16  librt.so.1  libsfml-network.so.2.5  libyaml-cpp.so.0.6
GCC++_BUILD_AND_BINARY_FILES/GCC++_BINARY_FILES/: EXPORTED_DELIVERIES.txt  GCC_COPIED_SHARED_LIBS.txt  GCC_LINK_MESSAGES.txt  OBJDUMP_INFOS.txt
GCC++_BUILD_AND_BINARY_FILES/GCC++_BINARY_FILES/GCC_PROJECT_TO_BE_EXPORTED/: EXPORT_DELIVERIES.txt  READELF_INFOS.txt  libglib-2.0.so.0  libudev.so.1  libvorbisfile.so.3
GCC++_BUILD_AND_BINARY_FILES/GCC++_BINARY_FILES/GCC_PROJECT_TO_BE_EXPORTEDED/: EXPORTED_DELIVERIES.txt  libXext.so.6  libXrender.so.1  libharfbuzz.so.0  libm.so.6  libudev.so.1  libvorbis.so.0  libz.so.1
GCC++_BUILD_AND_BINARY_FILES/GCC++_BINARY_FILES/SHARED_LIBS/: libGLX.so.0  libGLdispatch.so.0  libX11.so.6  libglib-2.0.so.0  libgraphite2.so.3
GCC++_BUILD_AND_BINARY_FILES/GCC++_BUILD_FILES/: GCC_BUILD_MESSAGES.txt  MyCXXFile.cxx_BUILD_MESSAGE.txt  MyFile.cpp_BUILD_MESSAGE.txt  MyFourthFile.cpp_BUILD_MESSAGE.txt  MySecondFile.cpp_BUILD_MESSAGE.txt  MyThirdFile.cpp_BUILD_MESSAGE.txt  mainFile.cpp_BUILD_MESSAGE.txt
LIBRARIES/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
SCRIPTS/: build_clang++.sh  build_cmake++.sh  build_gcc++.sh
SOURCE_CPP/: CMakeLists.txt  MyCXXFile.cxx  MyFile.cpp  mainFile.cpp
SOURCE_CPP/[build/: CMakeCache.txt  Makefile  cmake_install.cmake
